--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "climato",
   "version": "0.1.0",
+  "proxy":"http://localhost:8080/",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
